<?xml version="1.0"?>
<package format="3">
  <name>hsrb_gazebo_bringup</name>
  <version>2.0.0</version>
  <description>
     basic launch files and configurations for HSR-B simulation in Gazebo.
  </description>

  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <author>Akiyoshi Ochiai</author>
  <author>Atsushi Tsutsumi</author>
  <author>Hiromichi Nakashima</author>
  <author>Kazuhito Tanaka</author>
  <author>Kazuto Murase</author>
  <author>Keisuke Takeshita</author>
  <author>Koji Terada</author>
  <author>Koki Kataoka</author>
  <author>Minori Higuchi</author>
  <author>Nobuyuki Matsuno</author>
  <author>Satoru Onoda</author>
  <author>Syuuhei Shiro</author>
  <author>Tamaki Nishino</author>
  <author>Takafumi Mizuno</author>
  <author>Yoshimi Iyoda</author>
  <author>Yosuke Matsusaka</author>
  <author>Yutaka Takaoka</author>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>hsrb_base_controllers</exec_depend>
  <exec_depend>hsrb_description</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
